2014-11-25  Oliver Kiddle  <opk@zsh.org>

	* users/19365 (credit Death Jester and Jan Larres):
	Completion/Base/Completer/_external_pwds;
	completer for current directory of other shell processes

2014-11-25  Barton E. Schaefer  <schaefer@zsh.org>

	* 33791: Src/loop.c: fatal errors in the try-block part of an
	"always" construct cause the entire construct to have nonzero
	status, even when TRY_BLOCK_ERROR is used to suppress the error.

2014-11-24  Peter Stephenson  <p.stephenson@samsung.com>

	* Daniel Hahler: 33746: Doc/Zsh/builtins.yo: read -q refers to -t.

2014-11-24  Mikael Magnusson  <mikachu@gmail.com>

	* 33785: Src/Modules/tcp.c: Fix leaks of desthost in ztcp.

2014-11-23  Barton E. Schaefer  <schaefer@zsh.org>

	* 33775: Src/exec.c: error opening file in $(<...) is not fatal

2014-11-23  Oliver Kiddle  <opk@zsh.org>

	* 33743: Src/Modules/zpty.c, configure.ac: use posix_openpt
	if it is available

2014-11-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33729: Completion/Unix/Command/_git: "git remote add" should
	complete local repositories.

	* 33740: Stephane: Doc/Zsh/expn.yo: "hideval" parameter type.

	* 33740: Stephane: Etc/FAQ.yo: Another way of avoiding MULTIO
	effects on pipes.

2014-11-22  Barton E. Schaefer  <schaefer@zsh.org>

	* 33763 (cf. Baptiste Daroussin 33747): Doc/Zsh/mod_system.yo:
	fix nested item list in generated zshmodules.1 man page.

2014-11-21  Barton E. Schaefer  <schaefer@zsh.org>

	* 33750: Src/text.c: handle function autoloads for DEBUG_BEFORE_CMD

	* unposted: Doc/Zsh/zle.yo: add menu reference to Text Objects

2014-11-21  Oliver Kiddle  <opk@zsh.org>

	* saga.xu: 33712: Completion/Debian/_apt: add --auto-remove

	* 33738: Src/Zle/zle_vi.c, Test/X02zlevi.ztst: account for a
	selection in vi-replace-chars

	* 33730: Doc/Zsh/zle.yo, Src/Zle/iwidgets.list,
	Src/Zle/textobjects.c, Src/Zle/zle.mdd, Src/Zle/zle_keymap.c,
	Test/X02zlevi.ztst: vim style text objects for selecting words
